--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body{
   margin: 0;
   padding: 0;
 }
+
+/* Navigation design inspired by w3schools.com */
 /* navigation */
 .overlay {
   height: 100%;
@@ -100,6 +102,7 @@ body{
 .hero{
   width: 100%;
   height: 100vh;
+  /* Image retrieved from: https://unsplash.com/photos/1braZySlEKA */
   background-image: url(ocean.jpg);
   background-size: cover;
   background-position: center;
@@ -205,6 +208,7 @@ h1 {
 }
 
 /* bubbles animation: timing */
+/* Image retrieved from: http://clipart-library.com/free/bubble-clipart-transparent.html */
 bubble image from: 
 .bubbles img:nth-child(1){
   width: 40px;
